# customsa

gmsv/: CMakeCache.txt  CMakeLists.txt  Makefile  badpetstring.txt  cmake_install.cmake  gmsv  out.txt
gmsv/src/: #util.c#  autil.c  callfromcli.c  configfile.c  function.c  log.c  lssproto_serv.c  net.c  saacproto_util.c  util.c
gmsv/src/battle/: battle_event.c
gmsv/src/char/: addressbook.c  char.c  char.c~  char_base.c  char_walk.c  event.c  title.c
gmsv/src/map/: map_warppoint.c  readmap.c
gmsv/src/npc/: npc_exchangeman.c  npc_sysinfo.c  npcutil.c
saac/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
saac/resources/: acserv.cf  acserv.cf~  badpetstring.txt  saac
saac/resources/char/0x64/: 22.0.char
saac/resources/char/0x93/: 111.0.char
saac/resources/char/0x99/: 333.0.char
saac/resources/char/0x9c/: 444.0.char
saac/resources/char/0x9f/: 555.0.char
saac/resources/char/0xa2/: 666.0.char
saac/resources/db/int/: db_duel
saac/resources/db/string/: db_addressbook
saac/src/: main.c  util.c
